[package]
name = "ironclaw_triggers"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Scheduled trigger domain and source-provider contracts for IronClaw Reborn"
publish = false

[features]
default = []
libsql = ["dep:libsql"]
postgres = ["dep:deadpool-postgres", "dep:tokio-postgres"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.13"
hex = "0.4"
deadpool-postgres = { version = "0.14", optional = true }
ironclaw_host_api = { path = "../ironclaw_host_api" }
ironclaw_turns = { path = "../ironclaw_turns" }
libsql = { version = "0.6", optional = true, default-features = false, features = ["core", "replication", "remote", "tls"] }
tokio-postgres = { version = "0.7", optional = true }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
ulid = { version = "1", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { version = "1", features = ["macros", "rt"] }
