[package]
name = "ironclaw_wasm_product_adapters"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "WASM v2 host runtime for IronClaw Reborn ProductAdapters (#3285)"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
http = "1"
ironclaw_host_api = { path = "../ironclaw_host_api", version = "0.1.0" }
ironclaw_product_adapters = { path = "../ironclaw_product_adapters", version = "0.1.0" }
ironclaw_turns = { path = "../ironclaw_turns", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync"] }
